--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <ul class="main-info__courses-list-subitem">
           <li><a href="https://youtube.com/playlist?list=PLo6puixMwuSNCt4bd99UheEjaS4EudoGJ" target="_blank">Hexlet: Course "Basics of logics"</a></li>
           <li><a href="https://youtube.com/playlist?list=PLDyvV36pndZFHXjXuwA_NywNrVQO0aQqb" target="_blank">JavaScript.ru: Course "Git"</a></li>
-          <li><a href="https://youtube.com/playlist?list=PLM6XATa8CAG4F9nAIYNS5oAiPotxwLFIr" target="_blank">Фрілансер по життю: Lessons on HTML, CSS, JS</a></li>
+          <li><a href="https://youtube.com/playlist?list=PLM6XATa8CAG4F9nAIYNS5oAiPotxwLFIr" target="_blank">Freelancer for life: Lessons on HTML, CSS, JS</a></li>
           <li><a href="https://www.youtube.com/watch?v=DOEtVdkKwcU" target="_blank">Vladilen Minin: Course "HTML for beginners"</a></li>
           <li><a href="https://www.youtube.com/c/%D0%90%D0%BD%D0%BD%D0%B0%D0%91%D0%BB%D0%BE%D0%BA" target="_blank">Anna Blok's channel</a></li>
         </ul>
