--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
   <div class="header-container">
     <nav class="header-navigation">
       <ul class="header-menu">
-        <li class="header-menu__item"><a href="#about">About me</a></li>
-        <li class="header-menu__item"><a href="#contacts">Contacts</a></li>
-        <li class="header-menu__item"><a href="#skills">Skills</a></li>
-        <li class="header-menu__item"><a href="#languages">Languages</a></li>
-        <li class="header-menu__item"><a href="#courses">Courses</a></li>
-        <li class="header-menu__item"><a href="#code">Code</a></li>
+        <li class="header-menu about-me"><a href="#about">About me</a></li>
+        <li class="header-menu contacts"><a href="#contacts">Contacts</a></li>
+        <li class="header-menu skills"><a href="#skills">Skills</a></li>
+        <li class="header-menu languages"><a href="#languages">Languages</a></li>
+        <li class="header-menu courses"><a href="#courses">Courses</a></li>
+        <li class="header-menu code"><a href="#code">Code</a></li>
       </ul>
     </nav>
     <div class="header-info">
-      <h1 class="header-info__full-name">Margarita Kremeshnaia</h1>
-      <h2 class="header-info__occupation">Future Front-End Developer</h2>
+      <h1 class="header-info name">Margarita Kremeshnaia</h1>
+      <h2 class="header-info occupation">Future Front-End Developer</h2>
     </div>
     <div class="header-image">
       <img src="assets/img/cv-photo.jpg" alt="Portrait">
@@ -34,7 +34,7 @@
 </header>
 
 <main class="main-info">
-  <section class="main-info__about-me" id="about">
+  <section class="main-info about-me" id="about">
     <h3>About myself:</h3>
     <p>
       Compared to others (<i>adults and already succesful in their fields</i>), i'm totally in the beginning of this tough but exciting journey.
@@ -50,51 +50,51 @@
       My poor unprepared head was boiling under the attack of Python's basics.
       It's no wonder, this studying process was shut down. At that moment, my thoughts were dismal.
     </p>
-    <blockquote class="about-me__quote">I never can do this... That's too much.</blockquote>
+    <blockquote class="about-me quote">I never can do this... That's too much.</blockquote>
     <p>
       After many months, to my joy now, i cooled off. And... Started again, but now from HTML/CSS + JavaScript.
       It was <strong>mine</strong>. I never felt this kind of excitement and interest in something before.
       Finally, this was a feeling of the ground under my feet.
     </p>
-    <blockquote class="about-me__quote">I really want to know all of this stuff! I should try hard and be persistent, and everything will be alright!</blockquote> 
+    <blockquote class="about-me quote">I really want to know all of this stuff! I should try hard and be persistent, and everything will be alright!</blockquote> 
     <p>
       So, i don't have any work experience or finished projects, but i do have a big hope in future and desire to work as hard as possible.
       That's the one of important parts of the whole success picture.
     </p>
   </section>
   
-  <section class="main-info__courses" id="courses">
+  <section class="main-info courses" id="courses">
     <h3>Courses:</h3>
-    <ol class="main-info__courses-list">
-      <li class="main-info__courses-list-item">
+    <ol class="main-info courses-list">
+      <li class="courses-list html-academy">
         HTML Academy:
-        <ul class="main-info__courses-list-subitem">
+        <ul class="html-academy subitem">
           <li><a href="https://htmlacademy.ru/courses" target="_blank">Free simulators on HTML, CSS, PHP, JavaScript</a></li>
           <li>Basics of HTML and CSS in 10 days (3-19 April 2022)</li>
           <li>May Challenge (2-12 May 2022)</li>
         </ul>
       </li>
-      <li class="main-info__courses-list-item">
+      <li class="courses-list geekbrains">
         GEEKBRAINS:
-        <ul class="main-info__courses-list-subitem">
+        <ul class="geekbrains subitem">
           <li><a href="https://gb.ru/courses/3321" target="_blank">Basics of Programming</a></li>
         </ul>
       </li>
-      <li class="main-info__courses-list-item">
+      <li class="courses-list freecodecamp">
         FreeCodeCamp:
-        <ul class="main-info__courses-list-subitem">
+        <ul class="freecodecamp subitem">
           <li><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">Responsive Web Design (In progress...)</a></li>
         </ul>
       </li>
-      <li class="main-info__courses-list-item">
+      <li class="courses-list rsschool">
         RS School:
-        <ul class="main-info__courses-list-subitem">
+        <ul class="rsschool subitem">
           <li><a href="https://rs.school/js-stage0/" target="_blank">JavaScript/Front-end. Stage 0 (In progress...)</a></li>
         </ul>
       </li>
-      <li class="main-info__courses-list-item">
+      <li class="courses-list youtube">
         YouTube:
-        <ul class="main-info__courses-list-subitem">
+        <ul class="youtube subitem">
           <li><a href="https://youtube.com/playlist?list=PLo6puixMwuSNCt4bd99UheEjaS4EudoGJ" target="_blank">Hexlet: Course "Basics of logics"</a></li>
           <li><a href="https://youtube.com/playlist?list=PLDyvV36pndZFHXjXuwA_NywNrVQO0aQqb" target="_blank">JavaScript.ru: Course "Git"</a></li>
           <li><a href="https://youtube.com/playlist?list=PLM6XATa8CAG4F9nAIYNS5oAiPotxwLFIr" target="_blank">Freelancer for life: Lessons on HTML, CSS, JS</a></li>
@@ -105,10 +105,10 @@
     </ol>
   </section>
 
-  <section class="main-info__code" id="code">
+  <section class="main-info code" id="code">
     <h3>Code example:</h3>
     <p>Simple calculator from Basics of Programming course (GEEKBRAINS).</p>
-    <pre>
+    <pre class="code-example">
       <code>
         var a = prompt("Enter the first number");
         var b = prompt("Enter the second number");
@@ -133,36 +133,36 @@
 </main>
 
 <aside class="aside-info">
-  <section class="aside-info__skills" id="skills">
+  <section class="aside-info skills" id="skills">
     <h3>Hard skills:</h3>
-    <ul class="aside-info__hard-skills">
-      <li class="aside-info__hard-skills-item">HTML5, CSS3</li>
-      <li class="aside-info__hard-skills-item">VS Code, Atom (Emmet)</li>
-      <li class="aside-info__hard-skills-item">Familiar with Git, GitHub</li>
-      <li class="aside-info__hard-skills-item">Familiar with Adobe Photoshop, Adobe Illustrator</li>
+    <ul class="skills hard-skills">
+      <li class="hard-skills item">HTML5, CSS3</li>
+      <li class="hard-skills item">VS Code, Atom (Emmet)</li>
+      <li class="hard-skills item">Familiar with Git, GitHub</li>
+      <li class="hard-skills item">Familiar with Adobe Photoshop, Adobe Illustrator</li>
     </ul>
     <h3>Soft skills:</h3>
-    <ul class="aside-info__soft-skills">
-      <li class="aside-info__soft-skills-item">Painstaking, accurate</li>
-      <li class="aside-info__soft-skills-item">Inquisitive</li>
-      <li class="aside-info__soft-skills-item">Quick learner</li>
-      <li class="aside-info__soft-skills-item">Solo/Team player</li>
+    <ul class="skills soft-skills">
+      <li class="soft-skills item">Painstaking, accurate</li>
+      <li class="soft-skills item">Inquisitive</li>
+      <li class="soft-skills item">Quick learner</li>
+      <li class="soft-skills item">Solo/Team player</li>
     </ul>
   </section>
-  <section class="aside-info__lang" id="languages">
+  <section class="aside-info lang" id="languages">
     <h3>Languages:</h3>
-    <ul class="aside-info__lang-list">
-      <li class="aside-info__lang-list-item">Russian (Native)</li>
-      <li class="aside-info__lang-list-item">English (Intermediate, ~B1-B2)</li>
-      <li class="aside-info__lang-list-item">In process of learning Ukrainian, Spanish, Korean...</li>
+    <ul class="lang lang-list">
+      <li class="lang-list item">Russian (Native)</li>
+      <li class="lang-list item">English (Intermediate, ~B1-B2)</li>
+      <li class="lang-list item">In process of learning Ukrainian, Spanish, Korean...</li>
     </ul>
   </section>
-  <section class="aside-info__contacts" id="contacts">
+  <section class="aside-info contacts" id="contacts">
     <h3>Contacts:</h3>
-    <ul class="aside-info__contacts-list">
-      <li class="aside-info__contacts-list-item"><a href="tel:+7(918)-667-26-78">Phone</a></li>
-      <li class="aside-info__contacts-list-item"><a href="mailto:ephemera96@protonmail.com">E-mail</a></li>
-      <li class="aside-info__contacts-list-item"><a href="https://t.me/plutovinno" target="_blank">Telegram</a></li>
+    <ul class="contacts contacts-list">
+      <li class="contacts-list item"><a href="tel:+7(918)-667-26-78">Phone</a></li>
+      <li class="contacts-list item"><a href="mailto:ephemera96@protonmail.com">E-mail</a></li>
+      <li class="contacts-list item"><a href="https://t.me/plutovinno" target="_blank">Telegram</a></li>
     </ul>
   </section>
 </aside>
