--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     </header>
   </div>
 
+  hr class="divider"
+
   <div class="main-container"> 
     <main class="main-info">
       <section class="main-info about-me" id="about">
@@ -172,6 +174,8 @@
       </section>
     </aside>
   </div>
+
+  <hr class="divider">
   
   <div class="footer-container">
     <footer class="footer">
