feat: Fix tag hr

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
   </div>
 
-  hr class="divider"
+  <hr class="divider">
 
   <div class="main-container"> 
     <main class="main-info">
