feat: Update index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>
           Compared to others (<i>adults and already succesful in their fields</i>), i'm totally in the beginning of this tough but exciting journey.
           When i graduated from high school, i decided to not throw myself under the first random faculty of the first random university.
-          Well... In other words, i decided to take a break due my preoccupation with a future profession and bad mental health.
+          Well... In other words, i decided to take a break due my preoccupation with a future profession and some issues with mental health.
           Fortunately, after some time my severe depression was defeated but i still was in dismay.
           More than a year ago my interests was primarly <i>not-technical-at-all</i>.
           I wanted to find my true self in arts or foreign languages. But, sooner or later, it simply became annoying and after all didn't bring any exhaust.
@@ -134,7 +134,6 @@
         <ul class="lang lang-list">
           <li class="lang-list item">Russian (Native)</li>
           <li class="lang-list item">English (Intermediate, ~B1-B2)</li>
-          <li class="lang-list item">In process of learning Ukrainian, Spanish, Korean...</li>
         </ul>
       </section>
 
@@ -143,7 +142,7 @@
         <ul class="contacts contacts-list">
           <li class="contacts-list item"><a href="tel:+7(918)-667-26-78">Phone</a></li>
           <li class="contacts-list item"><a href="mailto:ephemera96@protonmail.com">E-mail</a></li>
-          <li class="contacts-list item"><a href="https://t.me/plutovinno" target="_blank">Telegram</a></li>
+          <li class="contacts-list item"><a href="https://t.me/plutovinn0" target="_blank">Telegram</a></li>
         </ul>
       </section>
 
